# Zad2_Mod13

./: db.py  pyproject.toml  zadanie2_ver1.py  zadanie2_ver2.py
